# lib/api-spec/openapi.yaml
@@ -495,6 +495,10 @@ paths:
           in: query
           schema:
             type: integer
+        - name: generation
+          in: query
+          schema:
+            type: string
         - name: category
           in: query
           schema:
